# Intrusion-Detection-And-Prevention-System

./: README.md  docker-compose.yaml  document.md  pyproject.toml
old_version/: DEPLOYMENT_GUIDE.md  docker-compose.yaml
old_version/client/: Dockerfile  alert.py  pyproject.toml
old_version/server/: Dockerfile  api.py  pyproject.toml  start.sh
web_ids/: Dockerfile  app.py  pyproject.toml  requirements.txt
web_ids/core/: alert.py  db.py  monitor.py
web_ids/data/: ids.db
web_ids/downloads/: ids_agent.py
web_ids/templates/: base.html  dashboard.html  ips.html  login.html  processes.html  register.html  settings.html
