[project]
name = "intrusion-detection-and-prevention-system"
version = "0.1.0"
description = "IDS System"
authors = [
    {name = "Satoru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
