[tool.poetry]
name = "web-ids"
version = "0.1.0"
description = "Web-based Intrusion Detection System"
authors = ["IDS Team"]

[tool.poetry.dependencies]
python = ">=3.10"
Flask = "^3.0.0"
watchdog = "^3.0.0"
requests = "^2.31.0"
flask-login = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
